# todo-list-backend

./: README.md  pyproject.toml
collection/: create.yml  find all.yml  opencollection.yml
src/todolist/: list_item.py  main.py
